fix h2 underline 'jumping' problem

--- a/src/app/content/content.component.scss
+++ b/src/app/content/content.component.scss
@@ -50,7 +50,7 @@ h4 {
   cursor: pointer;
   &:hover {
     color: #1779ba;
-    border-bottom:none;
+    border-bottom: 2px solid #fff;
   } 
 }
 
